# sexbot

./: .gitignore  Cargo.toml  commands.txt  config.test.toml
config/: client_config.example.toml
config/plugins/: coinflip_config.toml  dorito_config.toml  help_config.toml  lmgtfy_config.toml  math_config.toml  metrics_config.toml  select_config.toml  somafm_config.toml  translate_config.example.toml  typist_config.toml  vote_config.toml  weather_config.toml
priv/config/: beke.toml  hash.toml  lucario.toml  nohomo.toml  pleurniche.toml  quotes.toml  roll.toml  translate.toml  ud.toml
src/: app.rs  macros.rs  main.rs  prelude.rs
src/plugins/: beke.rs  beke_plugin.rs  coinflip_plugin.rs  dorito.rs  dorito_plugin.rs  help.rs  help_plugin.rs  link_plugin.rs  lmgtfy.rs  lmgtfy_plugin.rs  lucario.rs  lucario_plugin.rs  math_plugin.rs  metrics.rs  metrics_plugin.rs  mod.rs  no_homo_plugin.rs  nohomo.rs  nohomo_plugin.rs  pleurniche.rs  pleurniche_plugin.rs  plugin.rs  quotes.rs  quotes_plugin.rs  reply.rs  reply_plugin.rs  roll_plugin.rs  translate_plugin.rs  ud_plugin.rs
