[package]
name = "sexbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
irc = "0.15"
rand = "0.8"
tokio = { version = "1.14", features = ["rt", "rt-multi-thread", "macros"] }
